<resources>
    <string name="app_name">Translate All</string>
    <string name="desOnBoard">Lorem lpsum is simply dummy text of the printing and typesetting industry Lorem lpsum has been.</string>
    <string name="what_can_i_translate_for_you_today">What can I translate for you today?</string>
    <string name="you">,You</string>
    <string name="hello">Hello</string>
    <string name="not_find_google">Could not find an google application \nNo app to recognize voice </string>
    <string name="install">INSTALL</string>
    <string name="voice_translate">Voice Translate</string>
    <string name="form">Form</string>
    <string name="to">To</string>
    <string name="show_language">Select Language</string>
    <string name="search_hint">Search Language</string>
    <string name="please_wait">Please Wait....</string>
    <string name="camera_translate">Camera Translate</string>
    <string name="no_text_found">Couldn\'t Find any text in here…</string>
</resources>