<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F1FE"
    tools:context=".fragment.VoiceTranslateFragment">

    <LinearLayout
        android:id="@+id/linearToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#477CF6"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imvBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/_10sdp"
            android:src="@drawable/ic_arrow_back_voice" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:gravity="center|start"
            android:text="@string/voice_translate"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp" />

        <ImageView
            android:id="@+id/imvFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_gravity="center"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_favorite_select" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:background="@drawable/rectangle_coner_home_fragment"
            android:orientation="vertical"
            android:weightSum="8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@drawable/rectangle_corner_voicef_one"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ic_speak_text_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:padding="@dimen/_10sdp"
                        android:src="@drawable/ic_volume_up" />
                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/tvInput"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/roboto"
                            android:hint="How are you"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14ssp" />
                    </androidx.core.widget.NestedScrollView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imvFlagFrom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/flag_el" />

                    <LinearLayout
                        android:id="@+id/imvDropFrom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:background="@drawable/rectangle_corner_spinner"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/_8sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/form"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/tvInputLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text=" : Other"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:src="@drawable/ic_drop_up" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imvCopyFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:layout_gravity="center|end"
                        android:src="@drawable/ic_copy" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@drawable/rectangle_coner_home_fragment"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ic_speak_text_to"
                        android:layout_width="wrap_content"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:src="@drawable/ic_volume_up_black" />
                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/tvOutput"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/roboto"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14ssp" />
                    </androidx.core.widget.NestedScrollView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imvFlag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/flag_el" />

                    <LinearLayout
                        android:id="@+id/imvDropTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/rectangle_corner_spinner"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/_8sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/to"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/tvOutputLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text=" : Other"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:src="@drawable/ic_drop_up" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:gravity="end|center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imvCopyTo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:layout_gravity="center|end"
                            android:layout_marginHorizontal="@dimen/_5sdp"
                            android:src="@drawable/ic_copy_to" />

                        <ImageView
                            android:id="@+id/imvShare"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:layout_gravity="center|end"
                            android:layout_marginHorizontal="@dimen/_15sdp"
                            android:src="@drawable/ic_share_voice_to" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <com.daotrung.hitranslate.utils.widget.RippleBackground
            android:id="@+id/rippleBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="#F2F1FE"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            app:rb_color="#0099CC"
            app:rb_duration="3000"
            app:rb_radius="32dp"
            app:rb_rippleAmount="4"
            app:rb_scale="6">

            <ImageView
                android:id="@+id/imgMicAnimation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/microphone_translate_animation" />
        </com.daotrung.hitranslate.utils.widget.RippleBackground>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>